Finalized description text, choose a new subtle grey patterned bg, fixed the spacing and growth of the question text-area.

--- a/UI/MedLlava/src/app/app.scss
+++ b/UI/MedLlava/src/app/app.scss
@@ -91,18 +91,17 @@
   margin: 1rem auto;
   display: grid;
   grid-template-rows: 1fr 5fr;
-  gap: 20px;
+  gap: 5px;
   padding: 10px;
   width: 40%;
 }
 .question-input {
-  max-width: 100%;
+  max-height: 9rem;
+  resize: vertical;
 }
 .question-input:focus {
-  /* remove the default blue outline */
   outline: none;
-  /* red highlight */
-  border-color: #e53935;         /* change border itself */
+  border-color: #e53935;   
   box-shadow: 0 0 0 2px #e5393577;
 }
 
@@ -118,12 +117,11 @@
 }
 .choices-grid input {
   padding: 2px;
+  //background-color:gainsboro;
 }
 .choices-grid input:focus {
-  /* remove the default blue outline */
   outline: none;
-  /* red highlight */
-  border-color: #e53935;         /* change border itself */
+  border-color: #e53935;
   box-shadow: 0 0 0 2px #e5393577;
 }
 
